--- a/install
+++ b/install
@@ -1,5 +1,14 @@
 #!/bin/sh
 
+show_help() {
+	echo "Usage: $0 [ARGS] PATH"
+	echo "Installs the aether desktop environment storing the system configuration files in PATH. If PATH does not exist it will be created. It will not override existing configuration."
+	echo
+	echo "Arguments:"
+	echo -e "-u | --update \t Uses the newest version of all packages."
+	echo -e "-h | --help \t Shows this help message."
+}
+
 set -e
 
 if command -v aether-system >/dev/null 2>&1; then
@@ -8,18 +17,32 @@ if command -v aether-system >/dev/null 2>&1; then
 fi
 
 UPDATE=false
+CONFIG_PATH=""
 
 for arg in $@; do
 	case $arg in
 		-u|--update)
 			UPDATE=true
-			;;
+		;;
+		-h|--help)
+			show_help
+			exit 0
+		;;
 		*)
-			echo "Invalid argument $arg"
-			exit 1
+			if [[ $CONFIG_PATH == "" ]]; then
+				CONFIG_PATH=$arg
+			else
+				echo "Invalid argument $arg"
+				exit 1
+			fi
 		;;
 	esac
 done
+
+if [[ $CONFIG_PATH == "" ]]; then
+	show_help
+	exit 1
+fi
 
 NIXOS_VERSION=$(nixos-version | head -c 5)
 USERNAME=$(getent passwd $USER | cut -d: -f5)
@@ -29,39 +52,36 @@ SCRIPTPATH=$(dirname "$SCRIPT")
 sudo rm -rf /etc/nixos
 sudo rm -rf /etc/aether
 sudo mkdir /etc/aether
-sudo mkdir /etc/aether/system-config
+sudo mkdir /etc/aether/state
+sudo mkdir -p $CONFIG_PATH
 
 sudo ln -s $SCRIPTPATH /etc/aether/src
+sudo ln -s $CONFIG_PATH /etc/aether/config
 
 sudo echo "{ ... }:
 { 
 	system.stateVersion = \"$NIXOS_VERSION\"; 
-}" | sudo tee /etc/aether/system-config/configuration.nix >> /dev/null
+}" | sudo tee /etc/aether/state/configuration.nix >> /dev/null
 
-	sudo echo "{ ... }:
-{ 
-	users.mutableUsers = true;
-	users.users.\"$USER\" = {
-		description = \"$USERNAME\";
-		extraGroups = [ \"wheel\" \"networkmanager\"];
-		isNormalUser = true;
-		createHome = true;
-		useDefaultShell = true;
-	};
-}" | sudo tee /etc/aether/system-config/users.nix >> /dev/null
+sudo nixos-generate-config --dir /etc/aether/state
 
-sudo echo "{ ... }:
-{ 
-	networking.hostName = \"$(hostname)\";
-}" | sudo tee /etc/aether/system-config/networking.nix >> /dev/null
+if [ ! -e "$CONFIG_PATH/users.nix" ]; then
+	sudo cp $SCRIPTPATH/system/defaults/users.nix $CONFIG_PATH/users.nix
+	sudo sed -i "s|{{user}}|$USER|g" $CONFIG_PATH/users.nix
+	sudo sed -i "s|{{username}}|$USERNAME|g" $CONFIG_PATH/users.nix
+fi
 
-sudo nixos-generate-config --dir /etc/aether/system-config
+if [ ! -e "$CONFIG_PATH/config.nix" ]; then
+	sudo cp $SCRIPTPATH/system/defaults/config.nix $CONFIG_PATH/config.nix
+	sudo sed -i "s|{{hostname}}|$(hostname)|g" $CONFIG_PATH/config.nix
+fi
 
 if [[ $UPDATE == true ]]; then
 	sudo rm -f /etc/aether/src/flake.lock
 fi
 
 sudo nixos-rebuild switch --flake $(readlink -f /etc/aether/src)/system/.#aether --impure
+aether apply
 
 echo "Instalation complete. Please, reboot the system."
 
