--- a/install
+++ b/install
@@ -9,6 +9,57 @@ show_help() {
 	echo -e "-h | --help \t Shows this help message."
 }
 
+prepare_system_config() {
+	sudo mkdir -p /etc/aether/state
+
+	sudo echo "{ ... }:
+	{ 
+		system.stateVersion = \"$NIXOS_VERSION\"; 
+	}" | sudo tee /etc/aether/state/configuration.nix >> /dev/null
+
+	sudo nixos-generate-config --dir /etc/aether/state
+
+	if [ ! -e $CONFIG_PATH ]; then
+		sudo mkdir -p $CONFIG_PATH
+
+		sudo cp $SCRIPTPATH/system/defaults/users.nix $CONFIG_PATH/users.nix
+		sudo sed -i "s|{{user}}|$USER|g" $CONFIG_PATH/users.nix
+		sudo sed -i "s|{{username}}|$USERNAME|g" $CONFIG_PATH/users.nix
+
+		sudo cp $SCRIPTPATH/system/defaults/config.nix $CONFIG_PATH/config.nix
+		sudo sed -i "s|{{hostname}}|$(hostname)|g" $CONFIG_PATH/config.nix
+	fi
+}
+
+apply_system_config() {
+	if [[ $UPDATE == true ]]; then
+		sudo rm -f /etc/aether/src/flake.lock
+	fi
+
+	sudo nixos-rebuild switch --flake $(readlink -f /etc/aether/src)/system/.#aether --impure
+}
+
+prepare_user_config() {
+	if [ ! -e $USER_CONFIG_PATH ]; then
+		mkdir -p $USER_CONFIG_PATH/modules
+
+		cp /etc/aether/src/user/defaults/home-manager.nix $USER_CONFIG_PATH/modules/home-manager.nix
+		sed -i "s|{{user}}|$USER|g" $USER_CONFIG_PATH/modules/home-manager.nix
+		sed -i "s|{{home}}|$HOME|g" $USER_CONFIG_PATH/modules/home-manager.nix
+
+		cp /etc/aether/src/user/defaults/config.nix $USER_CONFIG_PATH/config.nix
+		cp /etc/aether/src/user/defaults/flake.nix $USER_CONFIG_PATH/flake.nix
+	fi
+}
+
+apply_user_config() {
+	if [[ $UPDATE == true ]]; then
+		rm -f $USER_CONFIG_PATH/flake.lock
+	fi
+
+	aether apply 
+}
+
 set -e
 
 if command -v aether-system >/dev/null 2>&1; then
@@ -39,36 +90,16 @@ USERNAME=$(getent passwd $USER | cut -d: -f5)
 SCRIPT=$(realpath "$0")
 SCRIPTPATH=$(dirname "$SCRIPT")
 CONFIG_PATH=/etc/aether/config
+USER_CONFIG_PATH=$HOME/.config/aether
 
 sudo rm -rf /etc/nixos
 sudo mkdir -p /etc/aether
-sudo mkdir -p /etc/aether/state
-sudo mkdir -p /etc/aether/config
-
 sudo ln -s $SCRIPTPATH /etc/aether/src
 
-sudo echo "{ ... }:
-{ 
-	system.stateVersion = \"$NIXOS_VERSION\"; 
-}" | sudo tee /etc/aether/state/configuration.nix >> /dev/null
+prepare_system_config
+apply_system_config
 
-sudo nixos-generate-config --dir /etc/aether/state
-
-if [ ! -e $CONFIG_PATH ]; then
-	sudo cp $SCRIPTPATH/system/defaults/users.nix $CONFIG_PATH/users.nix
-	sudo sed -i "s|{{user}}|$USER|g" $CONFIG_PATH/users.nix
-	sudo sed -i "s|{{username}}|$USERNAME|g" $CONFIG_PATH/users.nix
-
-	sudo cp $SCRIPTPATH/system/defaults/config.nix $CONFIG_PATH/config.nix
-	sudo sed -i "s|{{hostname}}|$(hostname)|g" $CONFIG_PATH/config.nix
-fi
-
-if [[ $UPDATE == true ]]; then
-	sudo rm -f /etc/aether/src/flake.lock
-fi
-
-sudo nixos-rebuild switch --flake $(readlink -f /etc/aether/src)/system/.#aether --impure
-aether apply
+prepare_user_config
+apply_user_config
 
 echo "Instalation complete. Please, reboot the system."
-
